# federated_learning_testbed

./: CITATION.cff  README.md  requirements.txt
docker/: docker-compose.yml
docker/client/: Dockerfile
docker/docker/client/: docker-entrypoint.sh
docker/execute/: Dockerfile  docker-compose.yml
docker/server/: Dockerfile  docker-compose.yml
flwr-application/: pyproject.toml
flwr-application/federated_application/: client.py  models.py  mods.py  server.py  strategy.py  task.py  tshark_measurements.py
gnb_configuration/: band78.106PRB.x310_mimo.conf  gnb.sa.band78.fr1.106PRB.anl.usrpb210_nu.conf
helper_scripts/: authorize_ssh.sh  auto_analyze_trials.sh  dataset_distributor.sh  run_client.sh  run_trials.sh  transfer_latency_measurements.sh
util/: dataset_partitioner.py  get_model_summary.py
