[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "5GFed"
version = "1.0.0"
description = "Federated Learning with RpI and 5G; Collaborative research with NU and ANL"
license = "Apache-2.0"
dependencies = [
    "flwr",
    "flwr-datasets",
    "torch",
    "torchvision",
    "wandb",
]

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.flwr.app]
publisher = "Robert Hayek, NU, ANL"

[tool.flwr.app.components]
serverapp = "federated_application.server:app"
clientapp = "federated_application.client:app"

[tool.flwr.app.config]
rounds = 100
fraction_evaluate = 0
local_epochs = 1
learning_rate = 0.001
batch_size = 128
momentum = 0.9
weight_decay = 0.000001
min_num_clients = 3
interface = 'Ethernet'
model = 'squeezenet1_1'
dataset = 'cifar10'
distribution = 'iid'
wandb_api_key = ''
enable_server_wandb = true
enable_client_wandb = false
[tool.flwr.federations]
default = "federated_application"

[tool.flwr.federations.federated_application]
address = "129.105.6.252:9093"
insecure = true
